@@ -44,6 +44,10 @@
     <variable name="FanartBackgrounds">
         <value condition="System.HasAddon(script.extendedinfo) + [Container.Content(tags) | Container.Content(directors) | Container.Content(actors) | Container.Content(genres) | Container.Content(studios) | Container.Content(countries) | Container.Content(years) | Container.Content(sets) | SubString(ListItem.Path,videodb://1/7/,left)]">$INFO[Control.GetLabel(4750)]</value>
     </variable>
+    <variable name="TVFanartBackground">
+        <value condition="Container.Content(TVShows)">$INFO[ListItem.Art(fanart)]</value>
+        <value condition="Container.Content(Episodes) | Container.Content(seasons)">$INFO[ListItem.Art(tvshow.fanart)]</value>
+    </variable>
     <variable name="ExtraFanartVar">
         <value condition="[!System.HasAddon(script.extendedinfo) | IsEmpty(ListItem.Art(extrafanart1))] + [[Skin.HasSetting(ExtraFanMovies) + Container.Content(Movies)] | [Skin.HasSetting(ExtraFanTV) + [Container.Content(TVShows) | Container.Content(Seasons)]]]">$INFO[ListItem.Path,,extrafanart/]</value>
         <value condition="[!System.HasAddon(script.extendedinfo) | IsEmpty(ListItem.Art(extrafanart1))] + Skin.HasSetting(ExtraFanTV) + Container.Content(Episodes)">$INFO[ListItem.Path,,../extrafanart/]</value>
